# serialist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  Main.cpp  midi_generator_v1.cpp  multi_slider_playground.cpp  nop_playground.cpp  osc_playground.cpp  playground.cpp  serialist_looper.cpp  state_playground.cpp
app/SerialistLooper/: CMakeLists.txt  serialist_looper.cpp
lib/: CMakeLists.txt
misc/: gui_prototyping.maxpat
src/: accessor.h  collection.h  connectable.h  events.h  exceptions.h  facet.h  generation_graph.h  generation_layer.h  generative.h  generator.h  graph_node.h  held_notes.h  interpolation_adapter.h  interpolator.h  looper.h  main_component.h  map.h  mapping.h  modular_generator.h  new_generator.h  new_oscillator.h  nop_parameter.h  nop_socket.h  note_source.h  oscillator.h  output_handlers.h  parameter_keys.h  parameter_policy.h  (+17 more)
src/serialist/core/: CMakeLists.txt  connectable.h  event.h  exceptions.h  generation_graph.h  generative.h  policies.h
src/serialist/core/algo/: classifiers.h  exponential.h  facet.h  fraction.h  histogram.h  partial_note.h  random.h  weighted_random.h
src/serialist/core/algo/pitch/: notes.h
src/serialist/core/algo/random/: equal_duration_sampling.h  random.h
src/serialist/core/algo/temporal/: equal_duration_sampling.h  filters.h  meter.h  phase.h  phase_accumulator.h  phase_pulse.h  pulse.h  ramp_generator.h  time_gate.h  time_point.h  time_point_generators.h  transport.h  trigger.h
src/serialist/core/collections/: circular_buffer.h  held.h  multi_voiced.h  queue.h  range.h  scheduler.h  stack.h  vec.h  voices.h
src/serialist/core/generatives/: LEGACY_phase_pulsator.h  LEGACY_selector.h  allocator.h  auto_pulsator.h  index_node.h  interpolator.h  lowpass.h  make_note.h  operator.h  osc_sender.h  oscillator.h  patternizer.h  phase_map.h  phase_node.h  phase_pulsator.h  pulsator.h  pulse_filter.h  random_node.h  random_pulsator.h  router.h  sample_and_hold.h  scaler.h  selector.h  sequence.h  temp_phase_pulsator.h  transform.h  trigger_node.h  unit_pulse.h  variable.h  waveform.h
src/serialist/core/generatives/legacy/: random_pulsator.h  selector.h
src/serialist/core/generatives/stereotypes/: base_stereotypes.h
src/serialist/core/param/: deserialization.h  multi_socket.h  nop_parameter.h  nop_socket.h  parameter_keys.h  parameter_policy.h  socket_base.h  socket_handler.h  string_serialization.h
src/serialist/core/policies/: epsilon.h  parameter_policy.h  policies.h  socket_policy.h
src/serialist/core/temporal/: filters.h  meter.h  phase.h  phase_accumulator.h  phase_node.h  phase_pulse.h  pulse.h  time_gate.h  time_point.h  time_point_generators.h  transport.h  trigger.h
src/serialist/core/types/: domain_type.h  event.h  facet.h  fraction.h  index.h  meter.h  partial_note.h  phase.h  time_point.h  trigger.h
src/serialist/core/utility/: enums.h  mapping.h  math.h  optionals.h  stateful.h  traits.h
src/serialist/gui/: CMakeLists.txt  configuration_layer_component.h  look_and_feel.h  main_component.h  module_factory.h
src/serialist/gui/bases/: connectable_dnd_controller.h  connectable_module.h  connector_component.h  module_stereotypes.h  widget_stereotypes.h
src/serialist/gui/interaction/: drag_and_drop_LEGACY.h  generative_component.h  input_condition.h  input_events.h  input_handler.h  input_mode.h  input_mode_map.h  interaction_visualizations.h  interaction_visualizer.h
src/serialist/gui/interaction/drag_and_drop/: drag_and_drop.h
src/serialist/gui/io/: key_state.h  keyboard_shortcuts.h  midi_config.h  mouse_state.h  osc.h  renderers.h
src/serialist/gui/modules/: generator_module.h  interpolation_module.h  note_source_module.h  oscillator_module.h  pulsator_module.h  text_sequence_module.h
src/serialist/gui/param/: deserialization.h  parameter_keys.h  variant_converter.h  vt_parameter.h  vt_serialization.h  vt_serializer.h  vt_socket.h
src/serialist/gui/policies/: deserialization_policy.h  parameter_policy.h  policies.h  socket_policy.h
src/serialist/gui/value_tree/: vt_parameter.h
src/serialist/gui/views/: note_view.h  oscillator_view.h
src/serialist/gui/widgets/: combobox_widget.h  header_widget.h  multi_slider.h  slider_widget.h  socket_widget.h  toggle_button_widget.h
src/serialist/gui/widgets/multi_slider/: clefs.h  multi_slider_LEGACY.h  multi_slider_action_LEGACY.h  multi_slider_element.h
tests/core/: CMakeLists.txt
tests/core/algo/: classifiers_tests.cpp  equal_distribution_tests.cpp  facet_tests.cpp  filters_tests.cpp  fraction_tests.cpp  histogram_tests.cpp  phase_tests.cpp  pulse_tests.cpp  random_tests.cpp  time_point_tests.cpp  transport_tests.cpp  voices_tests.cpp
tests/core/collections/: queue_tests.cpp  range_tests.cpp  scheduler_tests.cpp  stack_tests.cpp  vec_tests.cpp
tests/core/generatives/: generator_tests.cpp  index_node_tests.cpp  interpolator_tests.cpp  lowpass_tests.cpp  make_note_tests.cpp  operator_tests.cpp  oscillator_tests.cpp  patternizer_tests.cpp  phase_map_tests.cpp  phase_node_tests.cpp  phase_pulsator_tests.cpp  pulsator_tests.cpp  pulse_filter_test.cpp  random_node_tests.cpp  random_pulsator_tests.cpp  router_tests.cpp  sample_and_hold_tests.cpp  scaler_tests.cpp  selector_tests.cpp  sequence_tests.cpp  variable_tests.cpp  waveform_tests.cpp
tests/core/generatives/legacy/: pulsator_tests.cpp  selector_tests.cpp
tests/core/param/: nop_tests.cpp
tests/core/temporal/: phase_accumulator_tests.cpp  phase_tests.cpp  time_point_tests.cpp
tests/core/types/: index_tests.cpp
tests/core/utility/: math_tests.cpp
tests/gui/: CMakeLists.txt  deserialization_tests.cpp  juce_tests.cpp  value_tree_tests.cpp
tests/testutils/: CMakeLists.txt  condition.h  events.h  exceptions.h  generative_runner.h  generators.h  node_runner.h  results.h  run_results.h  runner_results.h
tests/testutils/conditions/: c11.h  c1m.h  c1s.h  cms.h
tests/testutils/matchers/: m11.h  m1m.h  m1s.h  matchers_common.h  mms.h  v11.h
tests/testutils/tests/: m11_tests.cpp  m1m_tests.cpp  mms_tests.cpp  node_runner_tests.cpp  v11_tests.cpp
(+284 files in other folders)
